--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -127,6 +127,11 @@
   13. Runde - HV TDP Stainz vs. SV Geistthal 4:3
 </p>
 
+
+<p class="small">
+  14. Runde - STT Pichler vs. HV TDP Stainz 2:2
+</p>
+
 <br>
 
 <p class="normal">
@@ -146,9 +151,9 @@
 <br>
 
 
-<p class="normal">
+<!-- <p class="normal">
   <b>Spieltermine Frühjahr 2022:</b>
-</p>
+</p> -->
 
 <!-- 
 <p class="normal">12. Runde - MITTWOCH, 22.06.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. STT Dorfwirt Müller</p>
@@ -158,7 +163,7 @@
 <p class="normal">14. Runde - FREITAG, 15.07.2022 - 18:30 Uhr - Sportplatz Södingberg - STT Pichler vs. HV TDP Stainz</p>
 -->
 
-<p class="normal">14. Runde - FREITAG, 15.07.2022 - 18:30 Uhr - Sportplatz Södingberg - STT Pichler vs. HV TDP Stainz</p>
+<!-- <p class="normal">14. Runde - FREITAG, 15.07.2022 - 18:30 Uhr - Sportplatz Södingberg - STT Pichler vs. HV TDP Stainz</p> -->
 
 <br>
 <br>
