--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,137 +1,66 @@
-<div>
-    <mat-toolbar color="primary">
-      <mat-toolbar-row>
-        <button mat-icon-button (click)="sidenav.toggle();" fxShow="true" fxHide.gt-sm>
-          <mat-icon>menu</mat-icon>
-        </button>
-        <div fxShow="true" fxHide.lt-md="true">
-            &nbsp;<a md-button routerLink="/home" routerLinkActive="active"><span class="fa fa-users fa-sm"></span> Home</a>
-            <span class="flex-spacer"></span>
-            <!-- &nbsp;<a md-button routerLink="/duckrun" routerLinkActive="active"><span class="fas fa-dove"></span> Entenlauf</a>
-            <span class="flex-spacer"></span> -->
-            &nbsp;<a md-button routerLink="/news" routerLinkActive="active"><span class="fa fa-bookmark fa-sm"></span> News</a>
-            <span class="flex-spacer"></span>
-            &nbsp;<a md-button routerLink="/team" routerLinkActive="active"><span class="fa fa-portrait fa-sm"></span> Mannschaft</a>
-            <span class="flex-spacer"></span>
-            &nbsp;<a md-button routerLink="/championship" routerLinkActive="active"><span class="fa fa-award fa-sm"></span> Meisterschaft</a>
-            <span class="flex-spacer"></span>
-            &nbsp;<a md-button routerLink="/gallery" routerLinkActive="active"><span class="fa fa-camera fa-sm"></span> Galerie</a>
-            <span class="flex-spacer"></span>
-            &nbsp;<a md-button routerLink="/social" routerLinkActive="active"><span class="fa fa-video fa-sm"></span> Videos</a>
-            <span class="flex-spacer"></span>
-            &nbsp;<a md-button routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</a>
-            <span class="flex-spacer"></span>
-            &nbsp;<a md-button routerLink="/hallofpapp" routerLinkActive="active"><span class="fa fa-users fa-sm"></span> Hall of Papp-Fans</a>
-            <span class="flex-spacer"></span>
-            &nbsp;<a md-button routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Über uns</a>
-            <span class="flex-spacer"></span>
-            &nbsp;<a md-button routerLink="/contact" routerLinkActive="active"><span class="fa fa-users fa-sm"></span> Kontakt</a>
-            <span class="flex-spacer"></span>
-            &nbsp;<a md-button routerLink="/fanshop" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Fanshop</a>
-            <span class="flex-spacer"></span>
-            &nbsp;<a md-button routerLink="/membership" routerLinkActive="active"><span class="fa fa-flag fa-sm"></span> Mitgliedschaft</a>
-            <span class="flex-spacer"></span>
-            <!-- <a md-button routerLink="/halloffame" routerLinkActive="active"><span class="fa fa-award fa-sm"></span>Hall of Fame</a>
-            <span class="flex-spacer"></span> -->
-            &nbsp;<a md-button routerLink="/documents" routerLinkActive="active"><span class="fa fa-file fa-sm"></span> Dokumente</a>
-            <span class="flex-spacer"></span>
-            &nbsp;<a md-button routerLink="/surveys" routerLinkActive="active"><span class="fa fa-list-ol fa-sm"></span> Umfragen</a>
-            <span class="flex-spacer"></span>
-            &nbsp;<a md-button routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting Eleven</a>
-            <span class="flex-spacer"></span>
-            &nbsp;<a md-button routerLink="/advent" routerLinkActive="active"><span class="fa fa-candy-cane fa-sm"></span> Adventkalender</a>
-            <span class="flex-spacer"></span>
-        </div>
-      </mat-toolbar-row>
-    </mat-toolbar>
-  
-    <mat-sidenav-container #sidenavContainer style="position: absolute;top: 1;left: 0;height: 100%;z-index: 10;background-color: rgba(1,0,0,0.0); min-width: 1%;" [ngStyle]="{'width': width}">
-   
-    <!-- <mat-sidenav-container #sidenavContainer fxFlexFill> -->
-      <mat-sidenav #sidenav (openedChange)="navChanged($event)">
-        <mat-nav-list>
-          <a (click)="sidenav.toggle();" md-button routerLink="/home" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-home fa-sm"></span>
-            &nbsp;Home
-          </a>
-          <a (click)="sidenav.toggle();" md-button routerLink="/news" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-bookmark fa-sm"></span>
-            &nbsp;News
-          </a>
-          <a (click)="sidenav.toggle();" md-button routerLink="/team" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-portrait fa-sm"></span>
-            &nbsp;Mannschaft
-          </a>
-          <a (click)="sidenav.toggle();" md-button routerLink="/championship" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-award fa-sm"></span>
-            &nbsp;Meisterschaft
-          </a>
-          <a (click)="sidenav.toggle();" md-button routerLink="/gallery" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-camera fa-sm"></span>
-            &nbsp;Galerie
-          </a>
-          <a (click)="sidenav.toggle();" md-button routerLink="/social" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-video fa-sm"></span>
-            &nbsp;Videos
-          </a>
-          <a (click)="sidenav.toggle();" md-button routerLink="/donation" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-futbol fa-sm"></span>
-            &nbsp;Matchballspende</a>
-          <a (click)="sidenav.toggle();" md-button routerLink="/hallofpapp" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-users fa-sm"></span>
-            &nbsp;Hall of Papp-Fans</a>
-          <a (click)="sidenav.toggle();" md-button routerLink="/about" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-info fa-sm"></span>
-            &nbsp;Über uns
-          </a>
-          <a (click)="sidenav.toggle();" md-button routerLink="/contact" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-users fa-sm"></span>
-            &nbsp;Kontakt
-          </a>
-          <a (click)="sidenav.toggle();" md-button routerLink="/fanshop" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-shopping-cart fa-sm"></span>
-            &nbsp;Fanshop
-          </a>
-          <a (click)="sidenav.toggle();" md-button routerLink="/membership" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-flag fa-sm"></span>
-            &nbsp;Mitgliedschaft
-          </a>
-          <a (click)="sidenav.toggle();" md-button routerLink="/documents" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-file fa-sm"></span>
-            &nbsp;Dokumente
-          </a>
-          <a (click)="sidenav.toggle();" md-button routerLink="/surveys" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-list-ol fa-sm"></span>
-            &nbsp;Umfragen
-          </a>
-          <a (click)="sidenav.toggle(); " md-button routerLink="/startingeleven" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-futbol fa-sm"></span>
-            &nbsp;Starting Eleven
-          </a>
-          <!-- 
-          <a (click)="sidenav.toggle();" md-button routerLink="/duckrun" routerLinkActive="active" mat-list-item>
-            <span class="fas fa-dove"></span>
-            &nbsp;Entenlauf
-          </a>
-          -->
-          <a (click)="sidenav.toggle();" md-button routerLink="/advent" routerLinkActive="active" mat-list-item>
-            <span class="fas fa-candy-cane fa-sm"></span>
-            &nbsp;Adventkalender
-          </a>
-          <!-- <a md-button routerLink="/halloffame" routerLinkActive="active" mat-list-item>
-            <span class="fa fa-award fa-sm"></span>
-            &nbsp;Hall of Fame
-          </a> -->
-          <a (click)="sidenav.toggle();" mat-list-item>
-              <mat-icon>close</mat-icon> Close
-          </a>
-        </mat-nav-list>
-      </mat-sidenav>
-      <mat-sidenav-content fxFlexFill></mat-sidenav-content>
-    </mat-sidenav-container>
-  </div>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
 
-  <!-- <div class="logo">
-      <img src="/assets/images/logo.gif" height="120px" width="120px">
-  </div> -->
-  
+    <!-- Mobile nav -->
+    <button mat-menu-item [matMenuTriggerFor]="mobile" fxShow="true" fxHide.gt-sm><mat-icon>menu</mat-icon></button>
+    <mat-menu #mobile="matMenu">
+      <button mat-menu-item routerLink="/home" routerLinkActive="active"><span class="fa fa-users fa-sm"></span> Home</button>
+      <button mat-menu-item routerLink="/news" routerLinkActive="active"><span class="fa fa-bookmark fa-sm"></span> News</button>
+      <button mat-menu-item routerLink="/team" routerLinkActive="active"><span class="fa fa-portrait fa-sm"></span> Mannschaft</button>
+      
+      <button mat-menu-item [matMenuTriggerFor]="championship"><span class="fa fa-bookmark fa-sm"></span> Meisterschaft</button>
+      <mat-menu #championship="matMenu">
+          <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
+          <button mat-menu-item routerLink="/championship/2022-2023">Saison 2022/2023</button>
+      </mat-menu>
+
+      <button mat-menu-item routerLink="/gallery" routerLinkActive="active"><span class="fa fa-camera fa-sm"></span> Galerie</button>
+      <button mat-menu-item routerLink="/social" routerLinkActive="active"><span class="fa fa-video fa-sm"></span> Videos</button>
+      <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
+      <button mat-menu-item routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Über uns</button>
+      <button mat-menu-item routerLink="/contact" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Kontakt</button>
+      <button mat-menu-item routerLink="/fanshop" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Fanshop</button>
+      <button mat-menu-item routerLink="/membership" routerLinkActive="active"><span class="fa fa-flag fa-sm"></span> Mitgliedschaft</button>
+      <button mat-menu-item routerLink="/documents" routerLinkActive="active"><span class="fa fa-file fa-sm"></span> Dokumente</button>
+      
+      <button mat-menu-item routerLink="/hallofpapp" routerLinkActive="active"><span class="fa fa-users fa-sm"></span> Hall of Papp-Fans</button>
+      <button mat-menu-item routerLink="/surveys" routerLinkActive="active"><span class="fa fa-list-ol fa-sm"></span> Umfragen</button>
+      <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting Eleven</button>
+      <button mat-menu-item routerLink="/advent" routerLinkActive="active"><span class="fa fa-candy-cane fa-sm"></span> Adventkalender</button>
+      <!-- <button mat-menu-item routerLink="/halloffame" routerLinkActive="active"><span class="fa fa-award fa-sm"></span> Hall of Fame</button> -->
+    </mat-menu>
+
+    <!-- Desktop nav -->
+    <div fxLayout="row" fxShow="true" fxHide.lt-md="true">
+      <button mat-menu-item routerLink="/home" routerLinkActive="active"><span class="fa fa-users fa-sm"></span> Home</button>
+      <button mat-menu-item routerLink="/news" routerLinkActive="active"><span class="fa fa-bookmark fa-sm"></span> News</button>
+      <button mat-menu-item routerLink="/team" routerLinkActive="active"><span class="fa fa-portrait fa-sm"></span> Mannschaft</button>
+      
+      <button mat-menu-item [matMenuTriggerFor]="championship"><span class="fa fa-bookmark fa-sm"></span> Meisterschaft</button>
+      <mat-menu #championship="matMenu">
+          <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
+          <button mat-menu-item routerLink="/championship/2022-2023">Saison 2022/2023</button>
+      </mat-menu>
+
+      <button mat-menu-item routerLink="/gallery" routerLinkActive="active"><span class="fa fa-camera fa-sm"></span> Galerie</button>
+      <button mat-menu-item routerLink="/social" routerLinkActive="active"><span class="fa fa-video fa-sm"></span> Videos</button>
+      <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
+      <button mat-menu-item routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Über uns</button>
+      <button mat-menu-item routerLink="/contact" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Kontakt</button>
+      <button mat-menu-item routerLink="/fanshop" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Fanshop</button>
+      <button mat-menu-item routerLink="/membership" routerLinkActive="active"><span class="fa fa-flag fa-sm"></span> Mitgliedschaft</button>
+      <button mat-menu-item routerLink="/documents" routerLinkActive="active"><span class="fa fa-file fa-sm"></span> Dokumente</button>
+      
+      <button mat-menu-item [mat-menu-trigger-for]="more"><mat-icon>menu</mat-icon></button>
+
+      <mat-menu x-position="before" #more="matMenu">
+            <button mat-menu-item routerLink="/hallofpapp" routerLinkActive="active"><span class="fa fa-users fa-sm"></span> Hall of Papp-Fans</button>
+            <button mat-menu-item routerLink="/surveys" routerLinkActive="active"><span class="fa fa-list-ol fa-sm"></span> Umfragen</button>
+            <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting Eleven</button>
+            <button mat-menu-item routerLink="/advent" routerLinkActive="active"><span class="fa fa-candy-cane fa-sm"></span> Adventkalender</button>
+            <!-- <button mat-menu-item routerLink="/halloffame" routerLinkActive="active"><span class="fa fa-award fa-sm"></span> Hall of Fame</button> -->
+      </mat-menu>
+    </div>
+
+  </mat-toolbar-row>
+</mat-toolbar>
