Update dependencies, Replace Google Maps & Cookie Law

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -34,9 +34,10 @@
             <h3 style="text-align: center;">Hier findest du unser Stadion:</h3>
             <!-- this creates a google map on the page with the given lat/lng from -->
             <!-- the component as the initial center of the map: -->
-              <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" class="center" >
-                  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-              </agm-map>
+              <div *ngIf="apiLoaded | async">
+                <google-map [options]="options"></google-map>
+              </div>
+
           </div>
         </div>
       </div>
