Update championship data

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -75,6 +75,10 @@
     1. Runde - STT Pichler : HV TDP Stainz 2:2
   </p>
 
+  <p class="small">
+    2. Runde - HV TDP Stainz vs. STT Fürndörfler 0:3
+  </p>
+
   <br>
   
   <p class="normal">
@@ -90,9 +94,6 @@
   <p class="normal">
     <b>Spieltermine Frühjahr 2022:</b>
   </p>
- 
-  <p class="normal">2. Runde - SAMSTAG, 10.09.2022 - 18:00 Uhr - Stadion Stainz - HV TDP Stainz vs. STT Fürndörfler</p>
-  <hr>
 
   <p class="normal">3. Runde - SAMSTAG, 17.09.2022 - 18:00 Uhr - Stadion Stainz - HV TDP Stainz vs. GH Prettenthaler</p>
   <hr>
