Update championship page

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -79,6 +79,10 @@
     2. Runde - HV TDP Stainz vs. STT Fürndörfler 0:3
   </p>
 
+  <p class="small">
+    4. Runde - HV TDP Stainz vs.SV Geistthal 3:1
+  </p>
+
   <br>
   
   <p class="normal">
@@ -92,13 +96,10 @@
   <br>
 
   <p class="normal">
-    <b>Spieltermine Frühjahr 2022:</b>
+    <b>Spieltermine Herbst 2022:</b>
   </p>
 
-  <p class="normal">3. Runde - SAMSTAG, 17.09.2022 - 18:00 Uhr - Stadion Stainz - HV TDP Stainz vs. GH Prettenthaler</p>
-  <hr>
-
-  <p class="normal">4. Runde - SAMSTAG, 08.10.2022 - 18:30 Uhr - Stadion Stainz - HV TDP Stainz vs. SV Geistthal</p>
+  <p class="normal">3. Runde - Nachholtermin offen - Stadion Stainz - HV TDP Stainz vs. GH Prettenthaler</p>
   <hr>
 
   <p class="normal">5. Runde - FREITAG, 14.10.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. HFC Gössnitz</p>
