Update championship HTML

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -80,7 +80,11 @@
   </p>
 
   <p class="small">
-    4. Runde - HV TDP Stainz vs.SV Geistthal 3:1
+    4. Runde - HV TDP Stainz vs. SV Geistthal 3:1
+  </p>
+
+  <p class="small">
+    5. Runde - HV TDP Stainz vs. HFC Gössnitz 4:1
   </p>
 
   <br>
@@ -102,10 +106,7 @@
   <p class="normal">3. Runde - Nachholtermin offen - Stadion Stainz - HV TDP Stainz vs. GH Prettenthaler</p>
   <hr>
 
-  <p class="normal">5. Runde - FREITAG, 14.10.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. HFC Gössnitz</p>
-  <hr>
-
-  <p class="normal">6. Runde - SAMSTAG, 22.10.2022 - 16:00 Uhr - Sportplatz Georgsberg - FC Montagskicker vs. HV TDP Stainz</p>
+  <p class="normal">6. Runde - SAMSTAG, 22.10.2022 - 18:00 Uhr - Stadion Stainz - HV TDP Stainz vs. FC Montagskicker</p>
   <hr>
 
   <p class="normal">7. Runde - FREITAG, 28.10.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. SK Hohenburg</p>
