Update championship page

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -87,6 +87,14 @@
     5. Runde - HV TDP Stainz vs. HFC Gössnitz 4:1
   </p>
 
+  <p class="small">
+    6. Runde - HV TDP Stainz vs. 1. FC Montagskicker 7:3
+  </p>
+
+  <p class="small">
+    7. Runde - HV TDP Stainz vs. SK Hohenburg 3:4
+  </p>
+
   <br>
   
   <p class="normal">
@@ -100,18 +108,33 @@
   <br>
 
   <p class="normal">
-    <b>Spieltermine Herbst 2022:</b>
+    <b>Spieltermine Frühjahr 2023:</b>
   </p>
 
   <p class="normal">3. Runde - Nachholtermin offen - Stadion Stainz - HV TDP Stainz vs. GH Prettenthaler</p>
   <hr>
 
-  <p class="normal">6. Runde - SAMSTAG, 22.10.2022 - 18:00 Uhr - Stadion Stainz - HV TDP Stainz vs. FC Montagskicker</p>
+  <p class="normal">8. Runde - Termin noch offen - Stadion Stainz - HV TDP Stainz : STT Pichler</p>
   <hr>
 
-  <p class="normal">7. Runde - FREITAG, 28.10.2022 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. SK Hohenburg</p>
+  <p class="normal">9. Runde - Termin noch offen - Sparkassen Arena Voitsberg - GH Prettenthaler : HV TDP Stainz</p>
   <hr>
 
+  <p class="normal">10. Runde - Termin noch offen - Sportplatz Söding - STT Fürndörfler : HV TDP Stainz</p>
+  <hr>
+
+  <p class="normal">11. Runde - Termin noch offen - Sportplatz Gößnitz - HFC Gößnitz : HV TDP Stainz</p>
+  <hr>
+
+  <p class="normal">12. Runde - Termin noch offen - Sportplatz St. Johann/Köppling - SK Hohenburg : HV TDP Stainz</p>
+  <hr>
+
+  <p class="normal">13. Runde - Termin noch offen - Sportplatz Geistthal - SV Geistthal : HV TDP Stainz</p>
+  <hr>
+
+  <p class="normal">14. Runde - Termin noch offen - Stadion Stainz - HV TDP Stainz : 1. FC Montagskicker</p>
+  <hr>
+  
 </div>
 
 <div *ngIf="season == '2021-2022'">
