--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -40,6 +40,12 @@
       
       <button mat-menu-item routerLink="/hallofpapp" routerLinkActive="active"><span class="fa fa-users fa-sm"></span> Hall of Papp-Fans</button>
       <button mat-menu-item routerLink="/surveys" routerLinkActive="active"><span class="fa fa-list-ol fa-sm"></span> Umfragen</button>
+
+      <button mat-menu-item [matMenuTriggerFor]="goaloftheseason"><span class="fa fa-list-ol fa-sm"></span> Tor der Saison</button>
+      <mat-menu #goaloftheseason="matMenu">
+        <button mat-menu-item routerLink="/goaloftheseason/2022-2023">Tor der Saison 2022</button>
+      </mat-menu>
+    
       <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting Eleven</button>
       <button mat-menu-item routerLink="/advent" routerLinkActive="active"><span class="fa fa-candy-cane fa-sm"></span> Adventkalender</button>
       <!-- <button mat-menu-item routerLink="/halloffame" routerLinkActive="active"><span class="fa fa-award fa-sm"></span> Hall of Fame</button> -->
@@ -81,11 +87,16 @@
       <button mat-menu-item routerLink="/membership" routerLinkActive="active"><span class="fa fa-flag fa-sm"></span> Mitgliedschaft</button>
       <button mat-menu-item routerLink="/documents" routerLinkActive="active"><span class="fa fa-file fa-sm"></span> Dokumente</button>
       
-      <button mat-menu-item [mat-menu-trigger-for]="more"><mat-icon>menu</mat-icon></button>
+      <button mat-menu-item [matMenuTriggerFor]="goaloftheseason"><span class="fa fa-list-ol fa-sm"></span> Tor der Saison</button>
+      <mat-menu #goaloftheseason="matMenu">
+        <button mat-menu-item routerLink="/goaloftheseason/2022-2023">Tor der Saison 2022</button>
+      </mat-menu>
 
+      <button mat-menu-item [mat-menu-trigger-for]="more"><mat-icon>menu</mat-icon></button>
       <mat-menu x-position="before" #more="matMenu">
             <button mat-menu-item routerLink="/hallofpapp" routerLinkActive="active"><span class="fa fa-users fa-sm"></span> Hall of Papp-Fans</button>
             <button mat-menu-item routerLink="/surveys" routerLinkActive="active"><span class="fa fa-list-ol fa-sm"></span> Umfragen</button>
+
             <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting Eleven</button>
             <button mat-menu-item routerLink="/advent" routerLinkActive="active"><span class="fa fa-candy-cane fa-sm"></span> Adventkalender</button>
             <!-- <button mat-menu-item routerLink="/halloffame" routerLinkActive="active"><span class="fa fa-award fa-sm"></span> Hall of Fame</button> -->
