Embed goal of the season iFrame

--- a/src/app/goaloftheseason/goaloftheseason.component.html
+++ b/src/app/goaloftheseason/goaloftheseason.component.html
@@ -79,11 +79,17 @@
 <br>
 <br>
 
-<button style="margin: auto; font-size: 20px;" mat-button class="background-primary" (click)="reload()">Umfrage laden</button>
+<!-- <button style="margin: auto; font-size: 20px;" mat-button class="background-primary" (click)="reload()"> Umfrage laden</button> -->
+<!-- <button style="margin: auto; font-size: 20px;" mat-button class="background-primary" (click)="goToSurvey()">Zur Umfrage</button> -->
+
+<a href="https://www.umfrageonline.com/c/zwsdprsc" style="font-size: 20px; text-align: center; display: block;" target="_blank">
+    Zur Umfrage
+</a>
 
 <br>
+<br>
 
-<div id="surveyhero-embed-wcuxrs9g"></div>
+<!-- <div id="surveyhero-embed-wcuxrs9g"></div> -->
 
 <!-- <div class="h_iframe">
     <iframe 
